--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "react-dom": "18.2.0",
     "sass": "^1.66.1",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.1.0"
   }
 }
