--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "sass": "^1.66.1",
     "swr": "^2.2.2",
     "typescript": "5.2.2",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0"
