--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "eslint-config-next": "13.4.19",
     "formik": "^2.4.4",
     "next": "13.4.19",
+    "node-sass": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.66.1",
+    "sass-loader": "^13.3.2",
     "swr": "^2.2.2",
     "typescript": "5.2.2",
     "yup": "^1.2.0",
